force-app/main/default/objects/Feature_Toggle__mdt/fields/Feature_Toggle_Group__c.field-meta.xml
<CustomField>
    <fullName>Feature_Toggle_Group__c</fullName>
    <label>Feature Toggle Group</label>
    <referenceTo>Feature_Toggle_Group__mdt</referenceTo>
    <relationshipLabel>Feature Toggles</relationshipLabel>
    <relationshipName>Feature_Toggles</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>