force-app/main/default/objects/Feature_Toggle__mdt/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <label>Full Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>