force-app/main/default/objects/Feature_Toggle__mdt/listViews/All_Feature_Toggles.listView-meta.xml
<ListView>
    <fullName>All_Feature_Toggles</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Feature_Toggle_Group__c</columns>
    <columns>Custom_Permission_Name__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Feature Toggles</label>
    <language>en_US</language>
</ListView>